src/10-typography/group-b.less
/**
 * variables
 */

// this is the base size for everything we do
@type-pica-font-size: 16px;
@type-list-indent: @type-pica-font-size * 2;
@type-p-spacing: @type-pica-font-size;

/**
 * styles
 */
.type-cannon() {
    font-size: 32px;
    line-height: 36px;
}

.type-cannon-spacing() {
    margin-top: 18px;
}

.type-trafalgar() {
    font-size: 24px;
    line-height: 28px;
}

.type-trafalgar-spacing() {
    margin-top: 14px;
}

.type-doublepica() {
    font-size: 20px;
    line-height: 24px;
}

.type-doublepica-spacing() {
    margin-top: 24px;
}

.type-greatprimer() {
    font-size: 20px;
    line-height: 24px;
}

.type-greatprimer-spacing() {
    margin-top: 24px;
}

.type-pica() {
    font-size: @type-pica-font-size;
    line-height: 20px;
}

.type-pica-spacing() {
    margin-top: @type-pica-font-size;
}

.type-longprimer() {
    font-size: 16px;
    line-height: 20px;
}

.type-brevier() {
    font-size: 14px;
    line-height: 16px;
}

.type-minion() {
    font-size: 12px;
    line-height: 16px;
}

@import (multiple) "styles/include.less";

